tests/success/asm.moc
void main() {
    asm("
        LOADL 1
        LOADL 2
        SUBR Iadd
    ");
}
