tests/error/functions-1.moc
void main() {
}

int main() {
    return 42;
}
